--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
+		"prepare": "husky install",
 		"lint": "next lint",
+		"lint:fix": "next lint --fix",
 		"lint:types": "tsc --noEmit",
 		"format": "prettier 'src/**/*.{css,js,jsx,ts,tsx}' --write"
 	},
@@ -23,6 +25,7 @@
 		"autoprefixer": "^10.4.0",
 		"eslint": "7",
 		"eslint-config-next": "12.0.4",
+		"husky": "^7.0.4",
 		"postcss": "^8.3.11",
 		"prettier": "^2.4.1",
 		"tailwindcss": "^2.2.19",
