--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier 'src/**/*.{css,js,jsx,ts,tsx}' --write"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.4.2",
 		"@heroicons/react": "^1.0.5",
 		"classnames": "^2.3.1",
 		"next": "12.0.4",
