--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@headlessui/react": "^1.4.2",
 		"@heroicons/react": "^1.0.5",
+		"axios": "^0.24.0",
 		"classnames": "^2.3.1",
 		"next": "12.0.4",
 		"react": "17.0.2",
