--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@heroicons/react": "^1.0.5",
 		"axios": "^0.24.0",
 		"classnames": "^2.3.1",
+		"dayjs": "^1.10.7",
 		"next": "12.0.4",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
