--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 		"classnames": "^2.3.1",
 		"dayjs": "^1.10.7",
 		"next": "12.0.4",
+		"nprogress": "^0.2.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-query": "^3.33.1"
 	},
 	"devDependencies": {
 		"@types/node": "16.11.7",
+		"@types/nprogress": "^0.2.0",
 		"@types/react": "17.0.35",
 		"autoprefixer": "^10.4.0",
 		"eslint": "7",
