--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"nprogress": "^0.2.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-hot-toast": "^2.1.1",
 		"react-query": "^3.33.1"
 	},
 	"devDependencies": {
