--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
 		"prepare": "husky install",
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
-		"lint:types": "tsc --noEmit",
-		"format": "prettier 'src/**/*.{css,js,jsx,ts,tsx}' --write"
+		"tsc": "tsc --noEmit",
+		"format": "prettier 'src/**/*.{css,js,jsx,ts,tsx}' --write",
+		"format:list": "prettier --list-different \"src/**/*.{js,ts,jsx,tsx,css}\"",
+		"ci-check": "npm-run-all format:list --parallel lint tsc",
+		"postinstall": "is-ci || husky install"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.4.2",
@@ -32,6 +35,8 @@
 		"eslint": "7",
 		"eslint-config-next": "12.0.4",
 		"husky": "^7.0.4",
+		"is-ci": "^3.0.1",
+		"npm-run-all": "^4.1.5",
 		"postcss": "^8.3.11",
 		"prettier": "^2.4.1",
 		"tailwindcss": "^2.2.19",
