--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier 'src/**/*.{css,js,jsx,ts,tsx}' --write",
 		"format:list": "prettier --list-different \"src/**/*.{js,ts,jsx,tsx,css}\"",
 		"ci-check": "npm-run-all format:list --parallel lint tsc",
-		"postinstall": "is-ci || husky install"
+		"postinstall": "is-ci || yarn prepare"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.4.2",
