--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/node": "16.11.7",
 		"@types/nprogress": "^0.2.0",
 		"@types/react": "17.0.35",
+		"@types/tailwindcss": "^2.2.4",
 		"autoprefixer": "^10.4.0",
 		"eslint": "7",
 		"eslint-config-next": "12.0.4",
