--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-hot-toast": "^2.1.1",
-		"react-query": "^3.33.1"
+		"react-query": "^3.33.1",
+		"zustand": "^3.6.5"
 	},
 	"devDependencies": {
 		"@types/node": "16.11.7",
