--- a/package.json
+++ b/package.json
@@ -17,32 +17,32 @@
 	"dependencies": {
 		"@headlessui/react": "^1.5.0",
 		"@heroicons/react": "^1.0.5",
-		"axios": "^0.24.0",
+		"axios": "^0.26.1",
 		"classnames": "^2.3.1",
 		"dayjs": "^1.10.7",
-		"next": "12.1.0",
+		"next": "^12.1.4",
 		"nprogress": "^0.2.0",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-hot-toast": "^2.1.1",
 		"react-query": "^3.33.1",
 		"zustand": "^3.6.5"
 	},
 	"devDependencies": {
-		"@types/node": "16.11.7",
+		"@types/node": "^16.11.7",
 		"@types/nprogress": "^0.2.0",
-		"@types/react": "17.0.35",
-		"@types/tailwindcss": "^2.2.4",
+		"@types/react": "^17.0.35",
+		"@types/tailwindcss": "^3.0.10",
 		"@types/umami": "^0.1.0",
 		"autoprefixer": "^10.4.0",
-		"eslint": "7",
-		"eslint-config-next": "12.0.4",
+		"eslint": "^8.13.0",
+		"eslint-config-next": "^12.1.4",
 		"husky": "^7.0.4",
 		"is-ci": "^3.0.1",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.3.11",
 		"prettier": "^2.4.1",
-		"tailwindcss": "^2.2.19",
-		"typescript": "4.5.2"
+		"tailwindcss": "^3.0.23",
+		"typescript": "^4.6.3"
 	}
 }
