--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
             - name: Install dependencies
               run: pnpm install --frozen-lockfile
 
+            - name: Build languages
+              run: pnpm build-languages
+
             - name: Check formatting
               run: pnpm format:check
 
