--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"tsc": "tsc --noEmit",
 		"format": "prettier './**/*.{js,jsx,ts,tsx,css,json,md,yml}' --write",
 		"format:check": "prettier --check './**/*.{js,jsx,ts,tsx,css,json,md,yml}'",
-		"ci-check": "npm-run-all format:list --parallel lint tsc",
+		"ci-check": "npm-run-all format:check --parallel lint tsc",
 		"postinstall": "is-ci || yarn prepare"
 	},
 	"lint-staged": {
@@ -26,25 +26,26 @@
 	"dependencies": {
 		"@headlessui/react": "^1.6.6",
 		"@heroicons/react": "^1.0.5",
+		"@tanstack/react-query": "^4.0.10",
 		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
-		"dayjs": "^1.11.3",
-		"next": "^12.2.1",
+		"dayjs": "^1.11.4",
+		"next": "^12.2.3",
 		"nprogress": "^0.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-hot-toast": "^2.1.1",
-		"react-query": "^3.39.1",
-		"zustand": "^3.6.5"
+		"react-hot-toast": "^2.3.0",
+		"zustand": "^4.0.0"
 	},
 	"devDependencies": {
+		"@next/bundle-analyzer": "^12.2.3",
 		"@types/node": "^16.11.7",
 		"@types/nprogress": "^0.2.0",
 		"@types/react": "^18.0.15",
 		"@types/umami": "^0.1.0",
-		"autoprefixer": "^10.4.7",
-		"eslint": "^8.19.0",
-		"eslint-config-next": "^12.2.1",
+		"autoprefixer": "^10.4.8",
+		"eslint": "^8.21.0",
+		"eslint-config-next": "^12.2.3",
 		"esno": "^0.16.3",
 		"husky": "^8.0.1",
 		"is-ci": "^3.0.1",
@@ -52,7 +53,7 @@
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
-		"tailwindcss": "^3.1.5",
+		"tailwindcss": "^3.1.7",
 		"typescript": "^4.7.4"
 	}
 }
