--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
 		"@headlessui/react": "^1.6.6",
 		"@heroicons/react": "^1.0.5",
 		"@tanstack/react-query": "^4.2.3",
-		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
 		"dayjs": "^1.11.5",
 		"next": "^12.2.5",
 		"nprogress": "^0.2.0",
+		"ohmyfetch": "^0.4.18",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.3.0",
