--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"postinstall": "is-ci || yarn prepare"
 	},
 	"dependencies": {
-		"@headlessui/react": "^1.7.1",
+		"@headlessui/react": "^1.7.2",
 		"@heroicons/react": "^1.0.6",
-		"@tanstack/react-query": "^4.3.4",
+		"@tanstack/react-query": "^4.3.9",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.5",
 		"next": "^12.3.0",
@@ -33,7 +33,8 @@
 		"@types/nprogress": "^0.2.0",
 		"@types/react": "^18.0.20",
 		"@types/umami": "^0.1.0",
-		"autoprefixer": "^10.4.10",
+		"autoprefixer": "^10.4.11",
+		"csstype": "^3.1.1",
 		"eslint": "^8.23.1",
 		"eslint-config-next": "^12.3.0",
 		"esno": "^0.16.3",
@@ -45,6 +46,7 @@
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.1.8",
-		"typescript": "^4.8.3"
+		"typescript": "^4.8.3",
+		"webpack": "^5.74.0"
 	}
 }
