--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@headlessui/react": "^1.7.3",
 		"@heroicons/react": "^1.0.6",
 		"@tanstack/react-query": "^4.13.4",
+		"@vercel/og": "^0.0.20",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.6",
 		"next": "^13.0.1",
@@ -32,7 +33,6 @@
 		"@types/node": "^18.11.7",
 		"@types/nprogress": "^0.2.0",
 		"@types/react": "^18.0.24",
-		"@types/umami": "^0.1.0",
 		"autoprefixer": "^10.4.13",
 		"csstype": "^3.1.1",
 		"eslint": "^8.26.0",
