--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
 	"dependencies": {
 		"@headlessui/react": "^1.7.14",
 		"@heroicons/react": "^1.0.6",
-		"@tanstack/react-query": "^4.29.5",
+		"@tanstack/react-query": "^4.29.7",
 		"@vercel/og": "^0.5.4",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.7",
 		"js-cookie": "^3.0.5",
-		"next": "^13.1.6",
+		"next": "^13.4.3",
 		"nprogress": "^0.2.0",
-		"ohmyfetch": "^0.4.21",
+		"ofetch": "^1.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.1",
@@ -38,8 +38,8 @@
 		"@types/react": "^18.2.6",
 		"autoprefixer": "^10.4.14",
 		"csstype": "^3.1.2",
-		"eslint": "^8.40.0",
-		"eslint-config-next": "^13.4.1",
+		"eslint": "^8.41.0",
+		"eslint-config-next": "^13.4.3",
 		"esno": "^0.16.3",
 		"husky": "^8.0.3",
 		"is-ci": "^3.0.1",
@@ -50,6 +50,11 @@
 		"prettier": "^2.8.8",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.4",
-		"webpack": "^5.82.0"
+		"webpack": "^5.83.1"
+	},
+	"pnpm": {
+		"patchedDependencies": {
+			"ofetch@1.0.1": "patches/ofetch@1.0.1.patch"
+		}
 	}
 }
