--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@headlessui/react": "^1.7.15",
 		"@heroicons/react": "^1.0.6",
 		"@tanstack/react-query": "^4.29.17",
+		"@vercel/analytics": "^1.0.1",
 		"@vercel/og": "^0.5.8",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.8",
