--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,5 +6,12 @@
 	"schedule": ["before 9am on saturday"],
 	"npm": {
 		"stabilityDays": 3
-	}
+	},
+	"packageRules": [
+		{
+			"matchPackagePatterns": ["heroicons"],
+			"matchManagers": ["npm"],
+			"enabled": false
+		}
+	]
 }
