--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "pnpm build:languages && next dev",
-		"build": "pnpm build:languages && pnpm build:sitemap && pnpm build:app",
+		"build": "FORCE_COLOR=1 run-s -l build:languages build:sitemap build:app",
 		"build:languages": "tsx scripts/languages.ts",
 		"build:sitemap": "tsx scripts/sitemap.ts",
 		"build:app": "next build",
@@ -22,6 +22,7 @@
 		"@tanstack/react-query": "^5.14.2",
 		"@vercel/analytics": "^1.1.1",
 		"@vercel/og": "^0.6.1",
+		"@vercel/speed-insights": "^1.0.2",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.10",
 		"next": "^14.0.4",
