--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,9 @@
 		"incremental": true,
 		"paths": {
 			"@": ["./src/"],
-			"@/*": ["./src/*"],
-		},
+			"@/*": ["./src/*"]
+		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-	"exclude": ["node_modules"],
+	"exclude": ["node_modules"]
 }
