--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,12 +1,6 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["config:base", "group:allNonMajor"],
-	"rangeStrategy": "bump",
-	"timezone": "Europe/Moscow",
-	"schedule": ["before 9am on saturday"],
-	"npm": {
-		"stabilityDays": 3
-	},
+	"extends": ["github>pajecawav/renovate-config"],
 	"packageRules": [
 		{
 			"matchPackagePatterns": ["heroicons"],
