--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"tiny-server-timing": "^0.1.5"
 	},
 	"devDependencies": {
+		"@pajecawav/prettier-config": "^1.0.0",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20.11.17",
 		"@types/nprogress": "^0.2.3",
