--- a/package.json
+++ b/package.json
@@ -8,24 +8,23 @@
 		"build:sitemap": "tsx scripts/build-sitemap.ts",
 		"build:app": "next build",
 		"start": "next start",
-		"prepare": "husky install",
 		"lint": "next lint",
 		"tsc": "tsc --noEmit",
 		"format": "prettier './**/*.{js,jsx,ts,tsx,css,json,md,yml}' --write",
 		"format:check": "prettier --check './**/*.{js,jsx,ts,tsx,css,json,md,yml}'",
 		"ci-check": "npm-run-all format:check --parallel lint tsc",
-		"postinstall": "is-ci || yarn prepare"
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.19",
 		"@heroicons/react": "^1.0.6",
-		"@tanstack/react-query": "^5.35.1",
-		"@vercel/analytics": "^1.2.2",
+		"@tanstack/react-query": "^5.51.15",
+		"@vercel/analytics": "^1.3.1",
 		"@vercel/og": "^0.6.2",
-		"@vercel/speed-insights": "^1.0.10",
+		"@vercel/speed-insights": "^1.0.12",
 		"classnames": "^2.5.1",
-		"dayjs": "^1.11.11",
-		"next": "^14.2.3",
+		"dayjs": "^1.11.12",
+		"next": "^14.2.5",
 		"nprogress": "^0.2.0",
 		"ofetch": "^1.3.4",
 		"react": "^18.3.1",
@@ -36,23 +35,23 @@
 	"devDependencies": {
 		"@pajecawav/prettier-config": "^1.0.0",
 		"@types/js-cookie": "^3.0.6",
-		"@types/node": "^20.12.11",
+		"@types/node": "^20.14.12",
 		"@types/nprogress": "^0.2.3",
-		"@types/react": "^18.3.1",
+		"@types/react": "^18.3.3",
 		"autoprefixer": "^10.4.19",
 		"csstype": "^3.1.3",
-		"eslint": "^8.57.0",
-		"eslint-config-next": "^14.2.3",
-		"husky": "^9.0.11",
+		"eslint": "^9.8.0",
+		"eslint-config-next": "^14.2.5",
+		"husky": "^9.1.3",
 		"is-ci": "^3.0.1",
-		"lint-staged": "^15.2.2",
+		"lint-staged": "^15.2.7",
 		"next-statoscope": "^1.0.1",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.38",
-		"prettier": "^3.2.5",
-		"tailwindcss": "^3.4.3",
-		"tsx": "^4.9.3",
-		"typescript": "^5.4.5",
-		"webpack": "^5.91.0"
+		"postcss": "^8.4.40",
+		"prettier": "^3.3.3",
+		"tailwindcss": "^3.4.7",
+		"tsx": "^4.16.2",
+		"typescript": "^5.5.4",
+		"webpack": "^5.93.0"
 	}
 }
