--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"dev:vite": "vite --watch build",
 		"dev:nitro": "cross-env NODE_OPTIONS=--enable-source-maps nitro dev",
 		"preview": "cross-env NODE_OPTIONS=--enable-source-maps node .output/server/index.mjs",
-		"lint": "cross-env FORCE_COLOR=1 run-p -l lint:*",
+		"lint": "cross-env FORCE_COLOR=1 run-p -lc lint:*",
 		"lint:eslint": "eslint .",
 		"lint:tsc": "tsc --noEmit",
 		"lint:format": "prettier . --check",
@@ -24,7 +24,6 @@
 	},
 	"dependencies": {
 		"@vercel/og": "^0.6.8",
-		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"devalue": "^5.1.1",
 		"ofetch": "^1.4.1"
@@ -32,27 +31,30 @@
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
-		"@eslint/js": "^9.30.0",
+		"@eslint/js": "^9.32.0",
+		"@octokit/types": "^14.1.0",
 		"@pajecawav/prettier-config": "^1.0.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/js-cookie": "^3.0.6",
-		"@types/node": "^24.0.7",
-		"cross-env": "^7.0.3",
-		"eslint": "^9.30.0",
-		"hono": "^4.8.3",
+		"@types/node": "^24.1.0",
+		"cross-env": "^10.0.0",
+		"eslint": "^9.32.0",
+		"hono": "^4.8.9",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.1.2",
-		"nitropack": "^2.11.13",
+		"nitropack": "^2.12.4",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.6.2",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"rimraf": "^6.0.1",
 		"tailwindcss": "^4.1.11",
+		"tiny-server-timing": "^0.1.5",
 		"tsx": "^4.20.3",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.35.0",
-		"vite": "^7.0.0",
-		"vite-plugin-pwa": "^1.0.0",
+		"typescript-eslint": "^8.38.0",
+		"vite": "^7.0.6",
+		"vite-plugin-pwa": "^1.0.2",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
-	"packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
+	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
