feat: automatic src for islands

--- a/package.json
+++ b/package.json
@@ -30,12 +30,17 @@
 		"ofetch": "^1.4.1"
 	},
 	"devDependencies": {
+		"@babel/parser": "^7.28.3",
+		"@babel/traverse": "^7.28.3",
+		"@babel/types": "^7.28.2",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
 		"@eslint/js": "^9.32.0",
 		"@octokit/types": "^14.1.0",
 		"@pajecawav/prettier-config": "^1.0.0",
 		"@tailwindcss/vite": "^4.1.11",
+		"@types/babel__generator": "^7.27.0",
+		"@types/babel__traverse": "^7.28.0",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^24.1.0",
 		"cross-env": "^10.0.0",
@@ -53,6 +58,7 @@
 		"tsx": "^4.20.3",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.38.0",
+		"unplugin": "^2.3.5",
 		"vite": "^7.0.6",
 		"vite-plugin-pwa": "^1.0.2",
 		"vite-tsconfig-paths": "^5.1.4"
