--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"prepare:nitro": "nitropack prepare"
 	},
 	"dependencies": {
+		"@arborium/arborium": "^2.6.0",
 		"@vercel/analytics": "^1.6.1",
 		"@vercel/og": "^0.8.6",
 		"@vercel/speed-insights": "^1.3.1",
